Don't use GHA anymore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,12 @@ version: "3.8"
 
 services:
   gstreamer:
-    image: ghcr.io/harryjph/theta-gstreamer:arm64
+    build: .
     volumes:
     - /dev/bus/usb:/dev/bus/usb
     - ./entrypoint.sh:/usr/bin/entrypoint
     privileged: true
     restart: unless-stopped
-
-  reencode:
-    image: nvcr.io/nvidia/deepstream:6.4-samples-multiarch
-    entrypoint: ["sleep", "100000000"]
 
   mediamtx:
     image: bluenviron/mediamtx:latest
