--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 
 services:
   gstreamer:
+    container_name: streamer
     build: .
     volumes:
     - /dev/bus/usb:/dev/bus/usb
@@ -9,6 +10,7 @@ services:
     restart: unless-stopped
 
   mediamtx:
+    container_name: mediamtx
     image: bluenviron/mediamtx:latest
     ports:
     - 8554:8554
