--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
   mediamtx:
     container_name: mediamtx
+    hostname: mediamtx
     image: bluenviron/mediamtx:latest
     ports:
     - 8554:8554
